# ai_literature_assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
scripts/: manual_check.py  manual_check_analysis.py  manual_check_s2.py
src/: config.py
src/analysis/: __init__.py  claude_client.py  comparator.py  exceptions.py  extractor.py  prompts.py  schemas.py
src/search/: __init__.py  base.py  exceptions.py  semantic_scholar.py
src/storage/: __init__.py  crud.py  database.py  models.py  schemas.py
src/ui/: __init__.py  components.py  home_page.py  library_page.py  projects_page.py  search_page.py  settings_page.py  state.py
tests/: conftest.py  test_analysis_schemas.py  test_comparator.py  test_crud.py  test_extractor.py  test_models.py  test_search_base.py  test_semantic_scholar.py  test_ui_helpers.py
tests/fixtures/: s2_sample_responses.json
